// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PCT-WC-026: Snapshot Tests > Complex Data Structure Snapshots > should match analytics data snapshot 1`] = `
{
  "approvedHooks": 342,
  "generationMetrics": {
    "approvalRate": 0.507,
    "averageHooksPerAngle": 5,
    "topAwarenessLevel": 3,
    "topFramework": "Punchy",
  },
  "totalAngles": 135,
  "totalBrands": 5,
  "totalHooks": 675,
  "totalProducts": 15,
  "totalUSPs": 45,
}
`;

exports[`PCT-WC-026: Snapshot Tests > Complex Data Structure Snapshots > should match batch operation result snapshot 1`] = `
{
  "duration": 45000,
  "failed": 5,
  "operation": "generate-hooks",
  "results": [
    {
      "id": "hook-1",
      "status": "success",
    },
    {
      "id": "hook-2",
      "status": "success",
    },
    {
      "error": "Generation timeout",
      "id": "hook-3",
      "status": "failed",
    },
  ],
  "successful": 95,
  "totalRequested": 100,
}
`;

exports[`PCT-WC-026: Snapshot Tests > Complex Data Structure Snapshots > should match full product hierarchy snapshot 1`] = `
{
  "brand": {
    "colors": [
      "#FF0000",
      "#00FF00",
    ],
    "createdAt": "2025-01-01T00:00:00.000Z",
    "description": "A test brand for snapshots",
    "id": "brand-123",
    "logoUrl": null,
    "name": "Test Brand",
    "toneStyle": "Formal",
    "updatedAt": "2025-01-01T00:00:00.000Z",
    "values": "Quality, Innovation",
    "voice": "Professional",
  },
  "products": [
    {
      "benefits": [
        "Benefit 1",
        "Benefit 2",
      ],
      "brandId": "brand-123",
      "createdAt": "2025-01-01T00:00:00.000Z",
      "description": "A test product for snapshots",
      "features": [
        "Feature 1",
        "Feature 2",
      ],
      "id": "product-123",
      "name": "Test Product",
      "price": 99.99,
      "targetAudience": "Young professionals",
      "updatedAt": "2025-01-01T00:00:00.000Z",
      "usps": [
        {
          "angles": [
            {
              "category": "Ease of use",
              "createdAt": "2025-01-01T00:00:00.000Z",
              "hooks": [
                {
                  "angleId": "angle-123",
                  "approved": true,
                  "awarenessLevel": 3,
                  "createdAt": "2025-01-01T00:00:00.000Z",
                  "framework": "Punchy",
                  "id": "hook-123",
                  "sophisticationLevel": 2,
                  "text": "Shaky hands, steady glow",
                  "updatedAt": "2025-01-01T00:00:00.000Z",
                },
              ],
              "id": "angle-123",
              "text": "Beautiful even when applied blind",
              "updatedAt": "2025-01-01T00:00:00.000Z",
              "uspId": "usp-123",
            },
          ],
          "category": "Safety",
          "createdAt": "2025-01-01T00:00:00.000Z",
          "id": "usp-123",
          "productId": "product-123",
          "score": 0.95,
          "text": "Impossible to overdo",
          "updatedAt": "2025-01-01T00:00:00.000Z",
        },
      ],
    },
  ],
}
`;

exports[`PCT-WC-026: Snapshot Tests > Complex Data Structure Snapshots > should match generation workflow snapshot 1`] = `
{
  "input": {
    "angleId": "angle-123",
    "parameters": {
      "awarenessLevel": 3,
      "framework": "Punchy",
      "sophisticationLevel": 2,
    },
    "productId": "product-123",
    "uspId": "usp-123",
  },
  "output": {
    "generatedHooks": [
      {
        "angleId": "angle-123",
        "approved": true,
        "awarenessLevel": 3,
        "createdAt": "2025-01-01T00:00:00.000Z",
        "framework": "Punchy",
        "id": "hook-123",
        "sophisticationLevel": 2,
        "text": "Shaky hands, steady glow",
        "updatedAt": "2025-01-01T00:00:00.000Z",
      },
    ],
    "metadata": {
      "generationTime": 1200,
      "model": "claude-3-sonnet-20250219",
      "tokensUsed": 150,
    },
  },
  "step": "hook-generation",
}
`;

exports[`PCT-WC-026: Snapshot Tests > Configuration Snapshots > should match awareness levels config snapshot 1`] = `
[
  {
    "level": 1,
    "name": "Unaware",
    "strategy": "Educate about problem",
  },
  {
    "level": 2,
    "name": "Problem Aware",
    "strategy": "Agitate problem",
  },
  {
    "level": 3,
    "name": "Solution Aware",
    "strategy": "Differentiate solution",
  },
  {
    "level": 4,
    "name": "Product Aware",
    "strategy": "Overcome objections",
  },
  {
    "level": 5,
    "name": "Most Aware",
    "strategy": "Direct offer",
  },
]
`;

exports[`PCT-WC-026: Snapshot Tests > Configuration Snapshots > should match messaging frameworks config snapshot 1`] = `
[
  {
    "description": "Short, impactful",
    "id": "punchy",
    "name": "Punchy",
  },
  {
    "description": "Provocative claims",
    "id": "bold",
    "name": "Bold Statements",
  },
  {
    "description": "Aspirational",
    "id": "desire",
    "name": "Desire Future States",
  },
  {
    "description": "Curiosity-driven",
    "id": "question",
    "name": "Question-based",
  },
]
`;

exports[`PCT-WC-026: Snapshot Tests > Configuration Snapshots > should match sophistication levels config snapshot 1`] = `
[
  {
    "level": 1,
    "strategy": "State what product does",
  },
  {
    "level": 2,
    "strategy": "Bigger/better claims",
  },
  {
    "level": 3,
    "strategy": "Unique mechanism",
  },
  {
    "level": 4,
    "strategy": "Proof and specificity",
  },
  {
    "level": 5,
    "strategy": "Identification/tribe",
  },
]
`;

exports[`PCT-WC-026: Snapshot Tests > Dashboard API Responses > should match USP list response snapshot 1`] = `
{
  "data": [
    {
      "category": "Safety",
      "createdAt": "2025-01-01T00:00:00.000Z",
      "id": "usp-123",
      "productId": "product-123",
      "score": 0.95,
      "text": "Impossible to overdo",
      "updatedAt": "2025-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`PCT-WC-026: Snapshot Tests > Dashboard API Responses > should match brand detail response snapshot 1`] = `
{
  "data": {
    "colors": [
      "#FF0000",
      "#00FF00",
    ],
    "createdAt": "2025-01-01T00:00:00.000Z",
    "description": "A test brand for snapshots",
    "id": "brand-123",
    "logoUrl": null,
    "name": "Test Brand",
    "products": [
      {
        "benefits": [
          "Benefit 1",
          "Benefit 2",
        ],
        "brandId": "brand-123",
        "createdAt": "2025-01-01T00:00:00.000Z",
        "description": "A test product for snapshots",
        "features": [
          "Feature 1",
          "Feature 2",
        ],
        "id": "product-123",
        "name": "Test Product",
        "price": 99.99,
        "targetAudience": "Young professionals",
        "updatedAt": "2025-01-01T00:00:00.000Z",
      },
    ],
    "toneStyle": "Formal",
    "updatedAt": "2025-01-01T00:00:00.000Z",
    "values": "Quality, Innovation",
    "voice": "Professional",
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > Dashboard API Responses > should match brand list response snapshot 1`] = `
{
  "data": [
    {
      "colors": [
        "#FF0000",
        "#00FF00",
      ],
      "createdAt": "2025-01-01T00:00:00.000Z",
      "description": "A test brand for snapshots",
      "id": "brand-123",
      "logoUrl": null,
      "name": "Test Brand",
      "toneStyle": "Formal",
      "updatedAt": "2025-01-01T00:00:00.000Z",
      "values": "Quality, Innovation",
      "voice": "Professional",
    },
  ],
}
`;

exports[`PCT-WC-026: Snapshot Tests > Dashboard API Responses > should match empty brand list snapshot 1`] = `
{
  "data": [],
}
`;

exports[`PCT-WC-026: Snapshot Tests > Dashboard API Responses > should match hook list response snapshot 1`] = `
{
  "data": [
    {
      "angleId": "angle-123",
      "approved": true,
      "awarenessLevel": 3,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "framework": "Punchy",
      "id": "hook-123",
      "sophisticationLevel": 2,
      "text": "Shaky hands, steady glow",
      "updatedAt": "2025-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`PCT-WC-026: Snapshot Tests > Dashboard API Responses > should match paginated response snapshot 1`] = `
{
  "data": [
    {
      "colors": [
        "#FF0000",
        "#00FF00",
      ],
      "createdAt": "2025-01-01T00:00:00.000Z",
      "description": "A test brand for snapshots",
      "id": "brand-123",
      "logoUrl": null,
      "name": "Test Brand",
      "toneStyle": "Formal",
      "updatedAt": "2025-01-01T00:00:00.000Z",
      "values": "Quality, Innovation",
      "voice": "Professional",
    },
  ],
  "pagination": {
    "page": 1,
    "pageSize": 10,
    "total": 1,
    "totalPages": 1,
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > Dashboard API Responses > should match product list response snapshot 1`] = `
{
  "data": [
    {
      "benefits": [
        "Benefit 1",
        "Benefit 2",
      ],
      "brandId": "brand-123",
      "createdAt": "2025-01-01T00:00:00.000Z",
      "description": "A test product for snapshots",
      "features": [
        "Feature 1",
        "Feature 2",
      ],
      "id": "product-123",
      "name": "Test Product",
      "price": 99.99,
      "targetAudience": "Young professionals",
      "updatedAt": "2025-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`PCT-WC-026: Snapshot Tests > Error Response Snapshots > should match 404 error snapshot 1`] = `
{
  "error": {
    "code": "NOT_FOUND",
    "message": "Brand not found",
    "status": 404,
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > Error Response Snapshots > should match server error snapshot 1`] = `
{
  "error": {
    "code": "INTERNAL_ERROR",
    "message": "Internal server error",
    "status": 500,
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > Error Response Snapshots > should match unauthorized error snapshot 1`] = `
{
  "error": {
    "code": "UNAUTHORIZED",
    "message": "Unauthorized",
    "status": 401,
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > Error Response Snapshots > should match validation error snapshot 1`] = `
{
  "error": {
    "code": "VALIDATION_ERROR",
    "details": {
      "name": "Name is required",
      "price": "Price must be a positive number",
    },
    "message": "Validation failed",
    "status": 400,
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > Form Data Snapshots > should match USP creation request snapshot 1`] = `
{
  "category": "Quality",
  "productId": "product-123",
  "score": 0.9,
  "text": "Unique selling point",
}
`;

exports[`PCT-WC-026: Snapshot Tests > Form Data Snapshots > should match brand creation request snapshot 1`] = `
{
  "colors": [
    "#000000",
  ],
  "description": "Brand description",
  "name": "New Brand",
  "toneStyle": "Formal",
  "values": "Quality",
  "voice": "Professional",
}
`;

exports[`PCT-WC-026: Snapshot Tests > Form Data Snapshots > should match bulk hook generation request snapshot 1`] = `
{
  "awarenessLevels": [
    2,
    3,
    4,
  ],
  "frameworks": [
    "Punchy",
    "Bold",
    "Desire",
  ],
  "hooksPerCombination": 3,
  "productId": "product-123",
  "sophisticationLevels": [
    1,
    2,
  ],
}
`;

exports[`PCT-WC-026: Snapshot Tests > Form Data Snapshots > should match hook generation request snapshot 1`] = `
{
  "angleId": "angle-123",
  "awarenessLevel": 3,
  "count": 5,
  "framework": "Punchy",
  "sophisticationLevel": 2,
}
`;

exports[`PCT-WC-026: Snapshot Tests > Form Data Snapshots > should match product creation request snapshot 1`] = `
{
  "benefits": [
    "Benefit 1",
  ],
  "brandId": "brand-123",
  "description": "Product description",
  "features": [
    "Feature 1",
  ],
  "name": "New Product",
  "price": 49.99,
  "targetAudience": "Everyone",
}
`;

exports[`PCT-WC-026: Snapshot Tests > Modal Data Snapshots > should match brand edit modal data snapshot 1`] = `
{
  "brand": {
    "colors": [
      "#FF0000",
      "#00FF00",
    ],
    "createdAt": "2025-01-01T00:00:00.000Z",
    "description": "A test brand for snapshots",
    "id": "brand-123",
    "logoUrl": null,
    "name": "Test Brand",
    "toneStyle": "Formal",
    "updatedAt": "2025-01-01T00:00:00.000Z",
    "values": "Quality, Innovation",
    "voice": "Professional",
  },
  "mode": "edit",
}
`;

exports[`PCT-WC-026: Snapshot Tests > Modal Data Snapshots > should match delete confirmation modal data snapshot 1`] = `
{
  "id": "brand-123",
  "name": "Test Brand",
  "resource": "brand",
  "type": "delete",
}
`;

exports[`PCT-WC-026: Snapshot Tests > Modal Data Snapshots > should match export modal data snapshot 1`] = `
{
  "fields": [
    "name",
    "description",
    "createdAt",
  ],
  "filters": {
    "brandId": "brand-123",
    "dateFrom": "2025-01-01",
    "dateTo": "2025-12-31",
  },
  "format": "csv",
  "type": "export",
}
`;

exports[`PCT-WC-026: Snapshot Tests > Modal Data Snapshots > should match hook approval modal data snapshot 1`] = `
{
  "hooks": [
    {
      "angleId": "angle-123",
      "approved": true,
      "awarenessLevel": 3,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "framework": "Punchy",
      "id": "hook-123",
      "sophisticationLevel": 2,
      "text": "Shaky hands, steady glow",
      "updatedAt": "2025-01-01T00:00:00.000Z",
    },
  ],
  "mode": "approve",
  "productContext": {
    "brand": {
      "colors": [
        "#FF0000",
        "#00FF00",
      ],
      "createdAt": "2025-01-01T00:00:00.000Z",
      "description": "A test brand for snapshots",
      "id": "brand-123",
      "logoUrl": null,
      "name": "Test Brand",
      "toneStyle": "Formal",
      "updatedAt": "2025-01-01T00:00:00.000Z",
      "values": "Quality, Innovation",
      "voice": "Professional",
    },
    "product": {
      "benefits": [
        "Benefit 1",
        "Benefit 2",
      ],
      "brandId": "brand-123",
      "createdAt": "2025-01-01T00:00:00.000Z",
      "description": "A test product for snapshots",
      "features": [
        "Feature 1",
        "Feature 2",
      ],
      "id": "product-123",
      "name": "Test Product",
      "price": 99.99,
      "targetAudience": "Young professionals",
      "updatedAt": "2025-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > Modal Data Snapshots > should match import modal data snapshot 1`] = `
{
  "columns": [
    "name",
    "description",
    "voice",
  ],
  "fileType": "csv",
  "mapping": {
    "description": "brandDesc",
    "name": "brandName",
    "voice": "toneOfVoice",
  },
  "type": "import",
}
`;

exports[`PCT-WC-026: Snapshot Tests > UI State Snapshots > should match dashboard state snapshot 1`] = `
{
  "filters": {
    "brandId": null,
    "dateRange": "last-30-days",
  },
  "pagination": {
    "page": 1,
    "pageSize": 20,
  },
  "sort": {
    "direction": "desc",
    "field": "createdAt",
  },
  "view": "dashboard",
}
`;

exports[`PCT-WC-026: Snapshot Tests > UI State Snapshots > should match form state snapshot 1`] = `
{
  "errors": {},
  "isDirty": false,
  "isValid": true,
  "mode": "create",
  "touched": {},
  "type": "brand",
  "values": {
    "colors": [
      "#FF0000",
      "#00FF00",
    ],
    "createdAt": "2025-01-01T00:00:00.000Z",
    "description": "A test brand for snapshots",
    "id": "brand-123",
    "logoUrl": null,
    "name": "Test Brand",
    "toneStyle": "Formal",
    "updatedAt": "2025-01-01T00:00:00.000Z",
    "values": "Quality, Innovation",
    "voice": "Professional",
  },
}
`;

exports[`PCT-WC-026: Snapshot Tests > UI State Snapshots > should match modal state snapshot 1`] = `
{
  "cancelText": "Cancel",
  "confirmText": "Delete",
  "data": {
    "id": "brand-123",
  },
  "isOpen": true,
  "message": "Are you sure you want to delete this brand?",
  "title": "Delete Brand",
  "type": "confirm",
}
`;
